--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/dev
 spring.freemarker.template-loader-path=classpath:/templates/
 spring.freemarker.suffix=.ftl
+knote.uploadDir=/tmp/uploads/
