Working Version with MinIO

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.data.mongodb.uri=${MONGO_URL:mongodb://localhost:27017/dev}
 spring.freemarker.template-loader-path=classpath:/templates/
 spring.freemarker.suffix=.ftl
 knote.uploadDir=/tmp/uploads/
+minio.access.key=mykey
+minio.secret.key=mysecret
