--- a/pom.xml
+++ b/pom.xml
@@ -65,11 +65,39 @@
 			<version>0.18.2</version>
 		</dependency>
 	
-   <dependency>
-     <groupId>org.apache.tika</groupId>
-     <artifactId>tika-core</artifactId>
-     <version>1.22</version>
-   </dependency>
+		<dependency>
+            <groupId>org.apache.tika</groupId>
+     	    <artifactId>tika-core</artifactId>
+     		<version>1.22</version>
+   		</dependency>
+
+		<dependency>
+   		 	<groupId>io.minio</groupId>
+    		<artifactId>minio</artifactId>
+    		<version>6.0.8</version>
+  		</dependency>
+
+  		<dependency>
+    		<groupId>commons-io</groupId>
+    		<artifactId>commons-io</artifactId>
+   			<version>2.6</version>
+  		</dependency>
+
+		<dependency>
+    		<groupId>javax.annotation</groupId>
+   			<artifactId>javax.annotation-api</artifactId>
+   			<version>1.3.2</version>
+    		<scope>compile</scope>
+		</dependency>
+
+
+		<dependency>
+    <groupId>com.squareup.okio</groupId>
+    <artifactId>okio</artifactId>
+    <version>2.0.0</version> 
+</dependency>
+
+
  </dependencies>
 
 	<build>
@@ -88,5 +116,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
